Stretch fixed nav bar and color complete

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -71,8 +71,11 @@ body {
 }
 
 header {
-	width: auto;
-	margin-top: 15px;
+	width: 85%; 
+	top: 0;
+	/* margin-top: 15px; */
+	background-color: rgba(37, 125, 226, 0.767);
+	position: fixed;
 }
 
 .header-box-1 {
@@ -84,7 +87,6 @@ header {
 
 .header-box-logo {
 	display: inline-block;
-	width: 24%;
 	text-align: right;
 	vertical-align: middle;
 }
@@ -96,24 +98,25 @@ nav {
 
 nav a {
 	padding: 10px 10px 10px 0px; 
-	margin-right: 7%; 
+	margin-right: 7%;
+	margin-left: 5px; 
 	text-decoration: none; 
-	color: gray; 
+	color: white; 
 }
 
 nav a:hover {
-	color: blue;
+	color: black;
 }
 
-.logo {
+/* .logo {
 	padding: 10px 0px 10px 10px; 
 	width: 100%; 
 	height: 100%; 
-}
+} */
 
 
 .splash {
-	margin-top: 7%;
+	margin-top: 150px;
 }
 
 .cta-box {
